--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item">
+          <li class="header__links-list-item header__links-list-item-active">
             <a class="header__link header__link_active">
               главная
             </a>
 
           </li>
           <li class="header__links-list-item">
-            <a class="header__link header__link-before" href="#0">
+            <a class="header__link" href="#0">
               посмотреть лоты
             </a>
 
           </li>
           <li class="header__links-list-item">
-            <a class="header__link header__link-before" href="#0">
+            <a class="header__link" href="#0">
               об аукционе
             </a>
           </li>
@@ -80,7 +80,7 @@
             аукцион вещей, в которые никто не верил
           </p>
 
-          <button class="bet-button">
+          <button class="bet-button" type="button">
             сделать ставку
           </button>
         </div>
@@ -176,6 +176,8 @@
               </article>
             </a>
           </li>
+
+          
         </ul>
 
         <a class="lots__look-more-link" href="#0">
@@ -194,22 +196,24 @@
           <h2 class="about__title">
             Об аукционе
           </h2>
-          <p class="about__text about__text-first">
-            Здесь вы не встретите очередное пафосное собрание невероятно 
-            дорогого антиквариата. Наши лоты вообще не должны были попасть <br> 
-            ни на один аукцион. Потому что кому нужен дневник девочки- <br>
-            подростка или картина, которую может нарисовать даже ребёнок? <br>
-            Кому нужны все эти странные вещи, созданные любителями?
-          </p>
-          <p class="about__text about__text-second">
-            Слишком сложные или, наоборот, слишком простые. Опережающие <br>
-            своё время. В пух и прах растерзанные критиками. Непринятые и 
-            непонятые. Когда-то они казались просто неудачными. Но, несмотря <br>
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов
-            невозможно представить современную культуру. Когда в эти вещи не 
-            верил никто, продолжали верить их создатели. И сейчас эти лоты <br>
-            стали культовыми. 
-          </p>
+          <div class="about__text">
+            <p >
+              Здесь вы не встретите очередное пафосное собрание невероятно 
+              дорогого антиквариата. Наши лоты вообще не должны были попасть 
+              ни на один аукцион. Потому что кому нужен дневник девочки-
+              подростка или картина, которую может нарисовать даже ребёнок?
+              Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие 
+              своё время. В пух и прах растерзанные критиками. Непринятые и 
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря 
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов
+              невозможно представить современную культуру. Когда в эти вещи не 
+              верил никто, продолжали верить их создатели. И сейчас эти лоты 
+              стали культовыми. 
+            </p>
+          </div>
         </div>
       </section>
     </main>
@@ -253,19 +257,19 @@
 
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon" src="images/yt.svg" alt="Ютуб">
           </a>
         </li>
 
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon" src="images/vk.svg" alt="В контакте">
           </a>
         </li>
 
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img class="footer__social-icon" src="images/pinterest.svg" alt="Пинтерест">
           </a>
         </li>
