--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             оно
           </span>
           <span class="aligned-text_center">
-            тебе
+            теб<span>е</span>
           </span>
           <span class="aligned-text_right">
-            надо
+            над<span>о</span>
           </span>
         </h1>
 
